--- a/src/config/menu-order-config.json
+++ b/src/config/menu-order-config.json
@@ -10,6 +10,7 @@
     "Messenger",
     "BI",
     
+    "CRM",
     "Calendar",
     "Kanban",
 
@@ -25,9 +26,9 @@
   
   "separators": {
     "0": "Настройки",
-    "5": "Модули",
-    "10": "Обучение",
-    "14": "Трендовая аналитика",
-    "15": "Цифровая лаборатория"
+    "2": "Модули",
+    "8": "Обучение",
+    "12": "Трендовая аналитика",
+    "13": "Цифровая лаборатория"
   }
 } 
